--- a/static/css/home.css
+++ b/static/css/home.css
@@ -6,32 +6,32 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #765757; /* Background color of the page */
+    background-color: #765757;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Takes the full height of the viewport */
+    height: 100vh;
     color: white;
 }
 
 .home-container {
     padding: 40px;
     border-radius: 8px;
-    width: 100%; /* Use full width of the parent */
-    max-width: 400px; /* Max width for the form */
-    text-align: center; /* Center align the contents of the container */
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
 }
 
 .logo {
-    width: 100%; /* Adjust the size of the logo */
+    width: 100%;
     height: auto;
-    margin-bottom: 20px; /* Space between the logo and the form */
+    margin-bottom: 20px;
 }
 
 h1 {
     margin-bottom: 20px;
     font-size: 24px;
-    width: 100%; /* Ensure it takes the full width available */
+    width: 100%;
 }
 
 .button-container {
@@ -45,7 +45,7 @@ button {
     width: 100%;
     height: 6vh;
     padding: 10px;
-    background-color: #FFDADA; /* Button color */
+    background-color: #FFDADA;
 
     border: none;
     border-radius: 20px;
@@ -54,11 +54,11 @@ button {
 }
 
 button:hover {
-    background-color: #caa6a6; /* Button color on hover */
+    background-color: #caa6a6;
 }
 
 .sign-out {
-    background-color: #332323; /* Different color for sign out */
+    background-color: #332323;
     width: 100%;
     height: 6vh;
     padding: 10px;
@@ -70,5 +70,5 @@ button:hover {
 }
 
 .sign-out:hover {
-    background-color: #1f1414; /* Sign out button hover color */
+    background-color: #1f1414;
 }
