--- a/templates/login.html
+++ b/templates/login.html
@@ -1,27 +1,53 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
-</head>
-<body>
-    <div class="login-container">
-        <img src="{{ url_for('static', filename='assets/Logo.png') }}" alt="Logo" class="logo">
-        
-        <form action="/login" method="POST">
-            <h1>Welcome!</h1>
-            <div class="input-container">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
-            </div>
-            <div class="input-container">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
-            </div>
-            <button type="submit">Login</button>
-        </form>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Login</title>
+		<link
+			rel="stylesheet"
+			href="{% static 'css/login.css' %}"
+		/>
+	</head>
+	<body>
+		<div class="login-container">
+			<img
+				src="{% static 'assets/Logo.png' %}"
+				alt="Logo"
+				class="logo"
+			/>
+			<form
+				action="{% url 'login' %}"
+				method="POST"
+			>
+				{% csrf_token %}
+				<h1>Welcome!</h1>
+				<div class="input-container">
+					<label for="username">Username:</label>
+					<input
+						type="text"
+						id="username"
+						name="username"
+						placeholder="Enter your username"
+						required
+					/>
+				</div>
+				<div class="input-container">
+					<label for="password">Password:</label>
+					<input
+						type="password"
+						id="password"
+						name="password"
+						placeholder="Enter your password"
+						required
+					/>
+				</div>
+				<button type="submit">Login</button>
+			</form>
+		</div>
+	</body>
 </html>
