--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,35 +1,88 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/signup.css') }}">
-</head>
-<body>
-    <div class="signup-container">
-        <img src="{{ url_for('static', filename='assets/Logo.png') }}" alt="Logo" class="logo">
-        
-        <form action="/signup" method="POST">
-            <h1>Create Account</h1>
-            <div class="input-container">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
-            </div>
-            <div class="input-container">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-            <div class="input-container">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
-            </div>
-            <div class="input-container">
-                <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm your password" required>
-            </div>
-            <button type="submit">Sign Up</button>
-        </form>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>Signup</title>
+		<link
+			rel="stylesheet"
+			href="{% static 'css/signup.css' %}"
+		/>
+	</head>
+	<body>
+		<div class="signup-container">
+			<img
+				src="{% static 'assets/Logo.png' %}"
+				alt="Logo"
+				class="logo"
+			/>
+
+			<form
+				action="{% url 'signup' %}"
+				method="POST"
+			>
+				{% csrf_token %}
+				<h1>Create Account</h1>
+				<div class="input-container">
+					<label for="username">Username:</label>
+					<input
+						type="text"
+						id="username"
+						name="username"
+						placeholder="Enter your username"
+						value="{{ form.username.value|default_if_none:'' }}"
+						required
+					/>
+					{% if form.username.errors %}
+					<p class="error">{{ form.username.errors }}</p>
+					{% endif %}
+				</div>
+				<div class="input-container">
+					<label for="email">Email:</label>
+					<input
+						type="email"
+						id="email"
+						name="email"
+						placeholder="Enter your email"
+						value="{{ form.username.value|default_if_none:'' }}"
+						required
+					/>
+					{% if form.email.errors %}
+					<p class="error">{{ form.email.errors }}</p>
+					{% endif %}
+				</div>
+				<div class="input-container">
+					<label for="password">Password:</label>
+					<input
+						type="password"
+						id="password"
+						name="password"
+						placeholder="Enter your password"
+						required
+					/>
+					{% if form.password.errors %}
+					<p class="error">{{ form.password.errors }}</p>
+					{% endif %}
+				</div>
+				<div class="input-container">
+					<label for="confirm_password">Confirm Password:</label>
+					<input
+						type="password"
+						id="confirm_password"
+						name="confirm_password"
+						placeholder="Confirm your password"
+						required
+					/>
+					{% if form.confirm_password.errors %}
+					<p class="error">{{ form.confirm_password.errors }}</p>
+					{% endif %}
+				</div>
+				<button type="submit">Sign Up</button>
+			</form>
+		</div>
+	</body>
 </html>
