--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,10 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<meta
+			name="csrf-token"
+			content="{{ csrf_token }}"
+		/>
 		<title>Home</title>
 		<link
 			rel="stylesheet"
