Implement join game functionality and clean up debug prints

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
 				>
 					Create a Party
 				</button>
-				<button onclick="window.location.href='/join-party'">
+				<button onclick="window.location.href='/games/join/'">
 					Join a Party
 				</button>
 				<button onclick="window.location.href='/settings'">
